testsuite/tests/indexed-types/should_fail/T14033.stderr

T14033.hs:5:16: error: [GHC-23517]
    • A newtype constructor must have exactly one field
        but ‘Zero’ has none
      Zero :: Zero
    • In the definition of data constructor ‘Zero’
      In the newtype declaration for ‘Zero’
